--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/InteligenciaArtificial_PIA
 excludes=
+file.reference.poi-3.10-FINAL-20140208.jar=C:\\Users\\ASUS\\Downloads\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-3.10-FINAL-20140208.jar
+file.reference.poi-ooxml-3.10-FINAL-20140208.jar=C:\\Users\\ASUS\\Downloads\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-ooxml-3.10-FINAL-20140208.jar
+file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar=C:\\Users\\ASUS\\Downloads\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-ooxml-schemas-3.10-FINAL-20140208.jar
+file.reference.xmlbeans-2.3.0.jar=C:\\Users\\ASUS\\Downloads\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\ooxml-lib\\xmlbeans-2.3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.poi-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-ooxml-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar}:\
+    ${file.reference.xmlbeans-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
